scrollbar fix

--- a/about.css
+++ b/about.css
@@ -17,6 +17,7 @@
 body {
   font-family: Montserrat, sans-serif;
   background: var(--clr-gray100);
+  overflow-y: auto;
 }
 
 /* Custom scrollbar */
@@ -337,10 +338,6 @@ footer {
 
 /* Responsive configuration */
 @media (max-width: 600px) {
-  body {
-    overflow-y: auto;
-  }
-
   .nav-list {
     display: flex;
     justify-content: space-around;
@@ -358,17 +355,5 @@ footer {
 
   .nav-item {
     display: none;
-  }
-}
-
-@media (min-width: 1250px) {
-  body {
-    overflow-y: hidden;
-  }
-}
-
-@media (min-width: 1400px) {
-  body {
-    overflow-y: auto;
   }
 }
